--- a/style/style.css
+++ b/style/style.css
@@ -12,7 +12,7 @@ body {
 h2 {
 font-family: 'Rubik Moonrocks', cursive;
 color: black;
-font-size: 22px;
+font-size: 24px;
 }
 /* Жирафа */
 img:hover {
@@ -124,7 +124,7 @@ ul li.checked::before {
 input {
   margin: 0;
   border: none;
-  border-radius: 0;
+  border-radius: 15px 0 0 15px; 
   width: 75%;
   padding: 10px;
   float: left;
@@ -136,20 +136,22 @@ input {
 .addBtn {
   padding: 10px;
   width: 25%;
-  background: #d9d9d9;
-  color: rgb(0, 0, 0);
-  float: left;
+  background: #323131;
+  color: rgb(255, 255, 255);
+  float: center;
   font-size: 16px;
   cursor: pointer;
   transition: 0.3s;
-  border-radius: 0;
+  border-radius: 0 15px 15px 0;
   font-family: 'Balsamiq Sans', cursive;
   display: flex;
   justify-content: center;
+
+ 
 }
 
 .addBtn:hover {
-  background-color: #bbb;
+  background-color: rgb(117, 112, 112);
 }
 
 
